--- a/Learn/templates/base.html
+++ b/Learn/templates/base.html
@@ -44,7 +44,7 @@
           
           <li><a href="{% url 'Learn:register' %}">signup/signin</a></li>
 
-          <li><a href="{% url 'Learn:contact' %}">Contact</a></li>
+          <li><a href="{% url 'Learn:contact' %}">How it works</a></li>
 
           <span id = "hello-msg">Hello, {{request.user }}</span>
           <span><a href="{% url 'Learn:logout' %}">Logout</a></span>
@@ -53,10 +53,6 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      
-
-     
 
     </div>
   </header>
@@ -70,45 +66,42 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="{% url 'Learn:index' %}" class="logo d-flex align-items-center">
-            <span class="sitename">Mentor</span>
+            <span class="sitename">SkillShare HUb</span>
           </a>
+          {% for a in info %}
           <div class="footer-contact pt-3">
-          
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>{{a.city }}</p>
+            <p>{{ a.address }}</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>{{a.phone}}</span></p>
+            <p><strong>Email:</strong> <span>{{a.email}}</span></p>
           </div>
+          {% endfor %}
+
+          
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            {% for l in link %}
+            <a href="{{ l.url }}"><i class="{{ l.icon_class }}"></i></a>
+            {% endfor %}
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            {% for u in use %}
+            <li><a href="{{u.url}}">{{ u.name }}</a></li>
+            {% endfor %}
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            {% for s in service %}
+            <li><a href="{{s.url}}">{{s.name}}</a></li>
+            {% endfor %}
           </ul>
         </div>
-
         <div class="col-lg-4 col-md-12 footer-newsletter">
           <h4>Our Newsletter</h4>
           <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
@@ -125,7 +118,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Mentor</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">SkillShare Hub</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
